--- a/AbroadAdvisor/Views/User/Login.cshtml
+++ b/AbroadAdvisor/Views/User/Login.cshtml
@@ -1,4 +1,6 @@
-﻿@model Bennett.AbroadAdvisor.Models.LoginModel
+﻿@using Bennett.AbroadAdvisor.Models;
+
+@model LoginModel
 
 @{
     // http://support.appharbor.com/kb/tips-and-tricks/application-server-ips-ec2-configuration
@@ -7,8 +9,6 @@
     Layout = null;
     ViewBag.Title = "AbroadAdvisor";
 }
-
-<h2>@Request.UserHostAddress</h2>
 
 <!DOCTYPE html>
 <html>
