--- a/AbroadAdvisor/Views/Student/Add.cshtml
+++ b/AbroadAdvisor/Views/Student/Add.cshtml
@@ -6,6 +6,14 @@
     ViewBag.Title = "Add";
 }
 
+@section FooterScript {
+    <script>
+        $(function () {
+            $('#dob').datepicker();
+        });
+    </script>
+}
+
 @section Body {
     <div class="row">
         <div class="col-lg-12">
@@ -18,19 +26,20 @@
         </div>
     </div>
 
-    <div class="row">
-        <div class="col-lg-6">
-
-            @using (Html.BeginForm("Add", "Student", FormMethod.Post, new { role = "form" }))
-            {
-                @Html.AntiForgeryToken()
-                @Html.ValidationSummary()
+    @using (Html.BeginForm("Add", "Student", FormMethod.Post, new { role = "form" }))
+    {
+        @Html.AntiForgeryToken()
+        @Html.ValidationSummary()
+        
+        <div class="row">
+            <div class="col-lg-6">
+                <h2>Personal Information</h2>
 
                 <div class="row">
                     <div class="col-lg-4">
-                        <div class="form-group">
+                        <div class="form-group has-error">
                             <label>Full Name</label>
-                            @Html.TextBoxFor(s => s.FirstName, new {  @class = "form-control", placeholder = "First" })
+                            @Html.TextBoxFor(s => s.FirstName, new { @class = "form-control", placeholder = "First" })
                         </div>
                     </div>
                     <div class="col-lg-4">
@@ -40,70 +49,27 @@
                         </div>
                     </div>
                     <div class="col-lg-4">
-                        <div class="form-group">
+                        <div class="form-group has-error">
                             <label>&nbsp;</label>
                             @Html.TextBoxFor(s => s.LastName, new { @class = "form-control", placeholder = "Last" })
                         </div>
                     </div>
                 </div>
-                
-                <div class="row">
-                    <div class="col-lg-6">
-                        <div class="form-group">
-                            @Html.LabelFor(s => s.PhoneNumber)
-                            @Html.TextBoxFor(s => s.PhoneNumber, new { @class = "form-control" })
-                        </div>
-                    </div>
-                    <div class="col-lg-6">
-                        <div class="form-group">
-                            @Html.LabelFor(s => s.CellPhoneNumber)
-                            @Html.TextBoxFor(s => s.CellPhoneNumber, new { @class = "form-control" })
-                        </div>
-                    </div>
-                </div>
-                
-                <div class="row">
-                    <div class="col-lg-6">
-                        <div class="form-group">
-                            @Html.LabelFor(s => s.LivingOnCampus)
-                            @Html.DropDownListFor(s => s.LivingOnCampus, new SelectList(
-                                new[]
-                                {
-                                    new { Value = true, Text = "On-Campus" },
-                                    new { Value = false, Text = "Off-Campus" }
-                                },
-                                "Value",
-                                "Text",
-                                Model))
-                        </div>
-                    </div>
-                    <div class="col-lg-6">
-                        <div class="form-group">
-                            @Html.LabelFor(s => s.EnrolledFullTime)
-                            @Html.DropDownListFor(s => s.EnrolledFullTime, new SelectList(
-                                new[]
-                                {
-                                    new { Value = true, Text = "Full-time Student" },
-                                    new { Value = false, Text = "Part-time Student" }
-                                },
-                                "Value",
-                                "Text",
-                                Model))
-                        </div>
-                    </div>
-                </div>
-                
-                <div class="row">
-                    @Html.LabelFor(s => s.StreetAddress)
-                    @Html.TextBoxFor(s => s.StreetAddress, new { @class = "form-control" })
-                    @Html.TextBoxFor(s => s.StreetAddress2, new { @class = "form-control" })
 
-                    <div class="col-lg-4">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <div class="form-group">
+                            @Html.LabelFor(s => s.StreetAddress)
+                            @Html.TextBoxFor(s => s.StreetAddress, new { @class = "form-control" })
+                            @Html.TextBoxFor(s => s.StreetAddress2, new { @class = "form-control" })
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
                         <div class="form-group">
                             @Html.TextBoxFor(s => s.City, new { @class = "form-control", placeholder = "City" })
                         </div>
                     </div>
-                    <div class="col-lg-4">
+                    <div class="col-lg-2">
                         <div class="form-group">
                             @Html.TextBoxFor(s => s.State, new { @class = "form-control", placeholder = "State" })
                         </div>
@@ -119,7 +85,7 @@
                     <div class="col-lg-4">
                         <div class="form-group">
                             @Html.LabelFor(s => s.DormId)
-                            @Html.DropDownListFor(s => s.DormId, ViewBag.DormHalls as SelectList)
+                            @Html.DropDownListFor(s => s.DormId, ViewBag.DormHalls as SelectList, "Please Select", new { @class = "form-control" })
                         </div>
                     </div>
                     <div class="col-lg-4">
@@ -135,7 +101,122 @@
                         </div>
                     </div>
                 </div>
-                
+
+                <div class="form-group">
+                    @Html.LabelFor(s => s.Citizenship)
+                    @Html.DropDownListFor(s => s.Citizenship, ViewBag.Countries as SelectList, "Please Select", new { @class = "form-control" })
+                </div>
+
+                <div class="form-group">
+                    <div class="input-append date">
+                        @Html.LabelFor(s => s.DateOfBirth)
+                        @Html.TextBoxFor(s => s.DateOfBirth, new { @class = "form-control", id = "dob" })
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-6">
+                <h2>Student Information</h2>
+
+                <div class="row">
+                    <div class="col-lg-6">
+                        <div class="form-group">
+                            @Html.LabelFor(s => s.StudentId)
+                            @Html.TextBoxFor(s => s.StudentId, new { @class = "form-control" })
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="form-group">
+                            @Html.LabelFor(s => s.Classification)
+                            @Html.TextBoxFor(s => s.Classification, new { @class = "form-control" })
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-lg-6">
+                        <div class="form-group">
+                            @Html.LabelFor(s => s.Major)
+                            @Html.DropDownListFor(s => s.Major, ViewBag.Majors as SelectList, "Please Select", new { @class = "form-control" })
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="form-group">
+                            @Html.LabelFor(s => s.Minor)
+                            @Html.DropDownListFor(s => s.Minor, ViewBag.Majors as SelectList, "Please Select", new { @class = "form-control" })
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-lg-6">
+                        <div class="form-group">
+                            @Html.LabelFor(s => s.PellGrantRecipient)
+                            @Html.DropDownListFor(s => s.PellGrantRecipient, new SelectList(
+                                new[]
+                                {
+                                    new { Value = false, Text = "No" },
+                                    new { Value = true, Text = "Yes" }
+                                },
+                                "Value",
+                                "Text",
+                                Model), "Please Select", new { @class = "form-control" })
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="form-group">
+                            @Html.LabelFor(s => s.HasPassport)
+                            @Html.DropDownListFor(s => s.HasPassport, new SelectList(
+                                new[]
+                                {
+                                    new { Value = false, Text = "No" },
+                                    new { Value = true, Text = "Yes" }
+                                },
+                                "Value",
+                                "Text",
+                                Model), "Please Select", new { @class = "form-control" })
+                        </div>
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    @Html.LabelFor(s => s.Gpa)
+                    @Html.TextBoxFor(s => s.Gpa, new { @class = "form-control" })
+                </div>
+
+                <div class="row">
+                    <div class="col-lg-6">
+                        <div class="form-group">
+                            @Html.LabelFor(s => s.LivingOnCampus)
+                            @Html.DropDownListFor(s => s.LivingOnCampus, new SelectList(
+                                new[]
+                                {
+                                    new { Value = true, Text = "On-Campus" },
+                                    new { Value = false, Text = "Off-Campus" }
+                                },
+                                "Value",
+                                "Text",
+                                Model), "Please Select", new { @class = "form-control" })
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="form-group">
+                            @Html.LabelFor(s => s.EnrolledFullTime)
+                            @Html.DropDownListFor(s => s.EnrolledFullTime, new SelectList(
+                                new[]
+                                {
+                                    new { Value = true, Text = "Full-time Student" },
+                                    new { Value = false, Text = "Part-time Student" }
+                                },
+                                "Value",
+                                "Text",
+                            Model), "Please Select", new { @class = "form-control" })
+                        </div>
+                    </div>
+                </div>
+
+                <h2>Contact Information</h2>
+
                 <div class="row">
                     <div class="col-lg-6">
                         <div class="form-group">
@@ -150,85 +231,19 @@
                         </div>
                     </div>
                 </div>
-                
-                <div class="form-group">
-                    @Html.LabelFor(s => s.Citizenship)
-                    @Html.DropDownListFor(s => s.Citizenship, ViewBag.Countries as SelectList)
-                </div>
-                
-                <div class="row">
-                    <div class="col-lg-6">
-                        <div class="form-group">
-                            @Html.LabelFor(s => s.PellGrantRecipient)
-                            @Html.DropDownListFor(s => s.PellGrantRecipient, new SelectList(
-                                new[]
-                                {
-                                    new { Value = true, Text = "Yes" },
-                                    new { Value = false, Text = "No" }
-                                },
-                                "Value",
-                                "Text",
-                                Model))
-                        </div>
-                    </div>
-                    <div class="col-lg-6">
-                        <div class="form-group">
-                            @Html.LabelFor(s => s.HasPassport)
-                            @Html.DropDownListFor(s => s.HasPassport, new SelectList(
-                                new[]
-                                {
-                                    new { Value = true, Text = "Yes" },
-                                    new { Value = false, Text = "No" }
-                                },
-                                "Value",
-                                "Text",
-                                Model))
-                        </div>
-                    </div>
-                </div>
-                
-                <div class="form-group">
-                    @Html.LabelFor(s => s.Gpa)
-                    @Html.TextBoxFor(s => s.Gpa, new { @class = "form-control" })
-                </div>
 
                 <div class="form-group">
                     @Html.LabelFor(s => s.CampusEmail)
                     @Html.TextBoxFor(s => s.CampusEmail, new { @class = "form-control" })
                 </div>
-                
+
                 <div class="form-group">
                     @Html.LabelFor(s => s.AlternateEmail)
                     @Html.TextBoxFor(s => s.AlternateEmail, new { @class = "form-control" })
                 </div>
-                
-                
-                
-                <div class="form-group">
-                    @Html.LabelFor(s => s.PhoneNumber)
-                    @Html.TextBoxFor(s => s.PhoneNumber, new { @class = "form-control" })
-                    @*<p class="help-block">Example block-level help text here.</p>*@
-                </div>
-                
-                <div class="row">
-                    <div class="col-lg-6">
-                        <div class="form-group">
-                            @Html.LabelFor(s => s.HasPassport)
-                            <label class="checkbox-inline">
-                                @Html.CheckBoxFor(s => s.HasPassport)
-                            </label>
-                        </div>
-                    </div>
-                    <div class="col-lg-6">
-                        <div class="form-group">
-                            @Html.LabelFor(s => s.Gpa)
-                            @Html.TextBoxFor(s => s.Gpa, new { @class = "form-control" })
-                        </div>
-                    </div>
-                </div>
-                
-                <button type="submit" class="btn btn-default">Add Student Profile</button>
-            }
+            </div>
         </div>
-    </div>
+
+        <button type="submit" class="btn btn-default">Add Student Profile</button>
+    }
 }
