--- a/AbroadAdvisor/Views/Student/Add.cshtml
+++ b/AbroadAdvisor/Views/Student/Add.cshtml
@@ -4,6 +4,7 @@
 
 @{
     ViewBag.Title = "Add";
+    string submitButtonText = Model == null || Model.Id == default(int) ? "Add Student Profile" : "Edit Student Profile";
 }
 
 @section FooterScript {
@@ -244,6 +245,6 @@
             </div>
         </div>
 
-        <button type="submit" class="btn btn-default">Add Student Profile</button>
+        <button type="submit" class="btn btn-default">@submitButtonText</button>
     }
 }
