--- a/AbroadAdvisor/Views/Student/Add.cshtml
+++ b/AbroadAdvisor/Views/Student/Add.cshtml
@@ -3,8 +3,9 @@
 @model StudentModel
 
 @{
-    ViewBag.Title = "Add";
-    string submitButtonText = Model == null || Model.Id == default(int) ? "Add Student Profile" : "Edit Student Profile";
+    bool addingStudent = Model == null || Model.Id == default(int);
+    ViewBag.Title = addingStudent ? "Add" : "Edit";
+    string submitButtonText = addingStudent ? "Add Student Profile" : "Edit Student Profile";
 }
 
 @section FooterScript {
@@ -19,11 +20,11 @@
 @section Body {
     <div class="row">
         <div class="col-lg-12">
-            <h1>Add Student</h1>
+            <h1>@ViewBag.Title Student</h1>
             <ol class="breadcrumb">
                 <li><a href="@Url.Action("Index", "Home")"><i class="fa fa-dashboard"></i> Dashboard</a></li>
                 <li><a href="@Url.Action("List", "Student")"><i class="fa fa-users"></i> Students</a></li>
-                <li class="active"><i class="fa fa-edit"></i> Add Student</li>
+                <li class="active"><i class="fa fa-edit"></i> @ViewBag.Title Student</li>
             </ol>
         </div>
     </div>
