--- a/AbroadAdvisor/Views/User/Profile.cshtml
+++ b/AbroadAdvisor/Views/User/Profile.cshtml
@@ -23,14 +23,13 @@
         }
     </div>
 
-    <div class="row">
-        <div class="col-lg-6">
+    @using (Html.BeginForm(actionName, "User", FormMethod.Post, new { role = "form" }))
+    {
+        @Html.AntiForgeryToken()
+        @Html.ValidationSummary()
 
-            @using (Html.BeginForm(actionName, "User", FormMethod.Post, new { role = "form" }))
-            {
-                @Html.AntiForgeryToken()
-                @Html.ValidationSummary()
-
+        <div class="row">
+            <div class="col-lg-6">
                 <div class="row">
                     <div class="col-lg-4">
                         <div class="form-group">
@@ -50,7 +49,7 @@
                     @Html.LabelFor(s => s.Email)
                     @Html.TextBoxFor(s => s.Email, new { @class = "form-control" })
                 </div>
-                
+
                 <div class="form-group">
                     @Html.LabelFor(s => s.Password)
                     @Html.PasswordFor(s => s.Password, new { @class = "form-control" })
@@ -61,7 +60,9 @@
                     @Html.LabelFor(s => s.ConfirmPassword)
                     @Html.PasswordFor(s => s.ConfirmPassword, new { @class = "form-control" })
                 </div>
+            </div>
 
+            <div class="col-lg-6">
                 <div class="form-group">
                     @Html.LabelFor(s => s.Login)
 
@@ -75,7 +76,7 @@
                     }
                 </div>
 
-                if (!addingUser)
+                @if (!addingUser)
                 {
                     <div class="row">
                         <div class="col-lg-4">
@@ -92,8 +93,8 @@
                         </div>
                     </div>
                 }
-                
-                if (addingUser || Model.IsAdmin)
+
+                @if (addingUser || Model.IsAdmin)
                 {
                     <div class="row">
                         <div class="col-lg-6">
@@ -102,6 +103,9 @@
                                 <label class="checkbox-inline">
                                     @Html.CheckBoxFor(s => s.IsAdmin)
                                 </label>
+                                <p class="help-block">
+                                    Administrative access provides adding/editing users and other core functions.
+                                </p>
                             </div>
                         </div>
                         <div class="col-lg-6">
@@ -110,13 +114,16 @@
                                 <label class="checkbox-inline">
                                     @Html.CheckBoxFor(s => s.IsActive)
                                 </label>
+                                <p class="help-block">
+                                    Setting a user as active allows them to log in.
+                                </p>
                             </div>
                         </div>
                     </div>
                 }
-                
-                <button type="submit" class="btn btn-default">@submitButtonText</button>
-            }
+            </div>
         </div>
-    </div>
+
+        <button type="submit" class="btn btn-default">@submitButtonText</button>
+    }
 }
