Ping the server every 15 minutes to avoid shutdown

--- a/AbroadAdvisor/Views/Shared/_Layout.cshtml
+++ b/AbroadAdvisor/Views/Shared/_Layout.cshtml
@@ -144,5 +144,11 @@
 
     @Scripts.Render("~/bundles/js")
     @RenderSection("FooterScript", false)
+
+    <script>
+        $(function () {
+            Bennett.AbroadAdvisor.initPinger('@Url.Action("Ping", "Home")');
+        });
+    </script>
 </body>
 </html>
