Show actual time when hovering over badge

--- a/AbroadAdvisor/Views/Home/Index.cshtml
+++ b/AbroadAdvisor/Views/Home/Index.cshtml
@@ -35,7 +35,7 @@
                             }
                             
                             <a href="#" class="list-group-item">
-                                <span class="badge">@eventLog.RelativeDate</span>
+                                <span class="badge" title="@eventLog.EventDate.ToShortDateString() @eventLog.EventDate.ToShortTimeString()">@eventLog.RelativeDate</span>
                                 <i class="@iconClass"></i> @eventLog.ModifiedBy.FirstName @action @personName
                             </a>
                         }
