--- a/AbroadAdvisor/Views/User/Profile.cshtml
+++ b/AbroadAdvisor/Views/User/Profile.cshtml
@@ -82,13 +82,13 @@
                         <div class="col-lg-4">
                             <div class="form-group">
                                 @Html.LabelFor(s => s.Created)
-                                <p class="form-control-static">@Model.Created.ToLocalTime()</p>
+                                <p class="form-control-static">@Model.Created</p>
                             </div>
                         </div>
                         <div class="col-lg-4">
                             <div class="form-group">
                                 @Html.LabelFor(s => s.LastLogin)
-                                <p class="form-control-static">@Model.LastLogin.ToLocalTime()</p>
+                                <p class="form-control-static">@Model.LastLogin</p>
                             </div>
                         </div>
                     </div>
