--- a/AbroadAdvisor/Views/Student/List.cshtml
+++ b/AbroadAdvisor/Views/Student/List.cshtml
@@ -1,4 +1,5 @@
-﻿@using Bennett.AbroadAdvisor.Models;
+﻿@using Bennett.AbroadAdvisor.Core;
+@using Bennett.AbroadAdvisor.Models;
 
 @model IList<StudentModel>
 
@@ -47,6 +48,7 @@
                 <tr>
                     <th>Name <i class="fa fa-sort"></i></th>
                     <th>Email <i class="fa fa-sort"></i></th>
+                    <th>Phone Number <i class="fa fa-sort"></i></th>
                     <th></th>
                 </tr>
             </thead>
@@ -67,6 +69,7 @@
                                 <a href="mailto:@student.CampusEmail">@student.CampusEmail</a>
                             }
                         </td>
+                        <td>@Formatter.PhoneNumber(student.PhoneNumber)</td>
                         <td>
                             <a href="@Url.Action("List", "Note", new { studentId = student.Id })"
                                data-toggle="modal" data-target="#noteModal"
